[all-catalog-items] - Add new endpoint to metrics module.
